lagt till calendar styles

--- a/frontend/war/Frontend.css
+++ b/frontend/war/Frontend.css
@@ -13,3 +13,25 @@
   background: #dddddd;
   font-weight: bold;
 }
+
+/** Calendar style rules. */
+
+.wappy-calendar-header {
+    background: #92C1F0;
+}
+
+.wappy-calendar-mainView {
+    background: #F6C818;
+}
+
+.wappy-calendar-debugColor {
+    background: #7C7C7E;
+}
+
+.wappy-calendar-bookingForm {
+    z-index: 9999;
+}
+
+.wappy-calendar-bookingForm-picker {
+    z-index: 9998;
+}
