Desktop frontend with working startmenu and taskbar. Shortcuts are removed since they cause trouble. All this was only possible after rewriting the taskbar component of gxt, so all gxt desktop components are now placed in wappy.client.desktop with appropriate changes.

--- a/frontend/war/Frontend.css
+++ b/frontend/war/Frontend.css
@@ -36,8 +36,8 @@
 	background-repeat:no-repeat;
 }
 
-.wappy-startmenu-calendar {
-	background-image: url(images/wappy/calendar-icon_16px.png) !important;
+.wappy-startmenu-groups {
+	background-image: url(images/wappy/im16x16.png) !important;
 	background-repeat:no-repeat;
 }
 
